syntax = "proto3";
package gitlab.com.mercury.residenceservice.generated.model.v1;
option go_package = "gitlab.com.mercury/residenceserviceapi/v1";

import "common_model.proto";

// @TODO add description

message LeadBuilderSearchCriteria {
    // PageRequest
    PageRequest page_request = 1;

    // Filter by status
    int64 status_id = 2;

    // Filter by name
    string name = 3;
}

message LeadBuilderWrite {
    int64 builder_id = 1;
    int64 status_id = 2;
    int64 date_start = 3;
    int64 date_end = 4;
}

message LeadBuilderRead {
    int64 id = 1;
    int64 builder_id = 2;
    string builder_name = 3;
    int64 status_id = 4;
    LeadStatus status = 5;
    int64 date_start = 6;
    int64 date_end = 7;
}
